@@ -13,6 +13,7 @@
 	- Fixed: Checking the Hi-Res option would not allow segment values over 16.
 	- Added support for multiple spaces before the ring number.
 - Added new action "Add History Line" for quickly inserting 0 !HISTORY lines to headers
+- Added support for logoed studs, this should satisfy Steffen. :p
 - Added support for '0 BFC CLIP' and '0 BFC NOCLIP' and added auto-correction from errorneous MLCAD
 	syntax ('0 BFC CERTIFY CLIP').
 - When an external program is attempted to be used without a binary path defined, one will be asked
